# REI3-Tickets-MCP-Server

./: .env  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  commit-msg  commit_msg_install_lin.sh  commit_msg_install_win.ps1  config.ini  create_ssl_cert.ps1  docker-compose.yml  generate_keys.ps1  manage.py  open_config.ps1  pyproject.toml  rei3_tickets_mcp_server.py  setup_docker.ps1
src/: format.py  rei3_tickets_mcp_server.py  tickets_api_requests.py
src/common/: config_handler.py  formatter.py
src/rei3/tickets/api/: requests.py
src/rei3/tickets/mcp/: server.py
src/web_server/: setup_web_server.py
src/web_server/main/: asgi.py  settings.py  urls.py
src/web_server/mcp_app/: admin.py  apps.py  models.py
test/: test_format.py  test_rei3_tickets_mcp_server.py  test_ticket_api_requests.py
test/common/: test_config_handler.py  test_formatter.py
test/rei3/tickets/api/: test_requests.py
test/rei3/tickets/mcp/: test_server.py
