[project]
name = "rei3-tickets-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "fastmcp>=2.12.0",
    "flask>=3.1.2",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
]
