[project]
name = "rei3-tickets-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "configupdater>=3.2",
    "dotenv>=0.9.9",
    "fastmcp>=2.13.1",
    "httpx>=0.28.1",
    "pyinstaller>=6.16.0",
    "pytest>=9.0.1",
]
